[UPDATE] Compatibilidad con el servidor